--- a/app/assets/stylesheets/matches.css.sass
+++ b/app/assets/stylesheets/matches.css.sass
@@ -50,6 +50,9 @@
   .players > table
     margin: auto
     width: 100%
+  @media (max-width: 767px)
+    .players > table td
+      padding-bottom: 10px
   @media (min-width: 768px)
     .players > table
       width: 80%
