--- a/app/assets/stylesheets/skin.css.scss
+++ b/app/assets/stylesheets/skin.css.scss
@@ -2812,7 +2812,7 @@ body {
 }
 @media (max-width: 767px) {
   .promo-text h1 {
-    font-size: 35px;
+    font-size: 24px;
     padding: 15px 30px;
   }
   .promo-text p {
