--- a/app/assets/stylesheets/skin_footballia.css
+++ b/app/assets/stylesheets/skin_footballia.css
@@ -53,6 +53,12 @@ ul.ul-toggle > li {
   font-size: 1.8em;
 }
 
+@media (max-width: 767px) { 
+  .vlinks.vlinks-lg.vlinks-iconed > li {
+    padding: 0 0 10px 65px;
+  }
+}
+
 @media (min-width: 768px) { 
   .vlinks.vlinks-lg.vlinks-iconed > li > span.figure {
     font-size: 2.5em;
